force-app/main/default/objects/Period_Close__c/Period_Close__c.object-meta.xml
<CustomObject>
    <description>Tracks the close date for each fiscal period. Actual_Revenue__c rows created after Close_Date__c for the matching period are flagged Is_Late__c = true.</description>
    <label>Period Close</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Period Close Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Period Closes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>