force-app/main/default/objects/Period_Close__c/fields/Composite_Key__c.field-meta.xml
<CustomField>
    <fullName>Composite_Key__c</fullName>
    <externalId>true</externalId>
    <label>Composite Key</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>