force-app/main/default/objects/Period_Close__c/fields/Reopen_Count__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Count__c</fullName>
    <label>Reopen Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <type>Number</type>
</CustomField>